--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@faker-js/faker": "^6.2.0",
     "@heroicons/react": "^1.0.6",
+    "@tailwindcss/forms": "^0.5.0",
+    "faker": "^6.6.6",
     "next": "12.1.5",
     "react": "18.1.0",
     "react-dom": "18.1.0"
