--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/forms": "^0.5.0",
     "faker": "^6.6.6",
     "next": "12.1.5",
+    "next-auth": "^4.3.4",
     "react": "18.1.0",
     "react-dom": "18.1.0"
   },
