--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^1.0.6",
     "@tailwindcss/forms": "^0.5.0",
     "faker": "^6.6.6",
+    "firebase": "^9.8.1",
     "next": "12.1.5",
     "next-auth": "^4.3.4",
     "react": "18.1.0",
