--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@faker-js/faker": "^6.2.0",
+    "@headlessui/react": "^1.6.2",
     "@heroicons/react": "^1.0.6",
     "@tailwindcss/forms": "^0.5.0",
     "faker": "^6.6.6",
@@ -17,7 +18,8 @@
     "next": "12.1.5",
     "next-auth": "^4.3.4",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "recoil": "^0.7.3-alpha.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.5",
