--- a/package.json
+++ b/package.json
@@ -15,10 +15,14 @@
     "@tailwindcss/forms": "^0.5.0",
     "faker": "^6.6.6",
     "firebase": "^9.8.1",
+    "javascript-time-ago": "^2.5.4",
+    "moment": "^2.29.3",
     "next": "12.1.5",
     "next-auth": "^4.3.4",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-moment": "^1.1.2",
+    "react-time-ago": "^7.2.1",
     "recoil": "^0.7.3-alpha.2"
   },
   "devDependencies": {
