--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next-auth": "^4.3.4",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-icons": "^4.4.0",
     "react-moment": "^1.1.2",
     "react-time-ago": "^7.2.1",
     "recoil": "^0.7.3-alpha.2"
